--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -10,14 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.43",
+    "expo-av": "~15.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9",
     "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1",
-    "expo-av": "~15.0.2"
+    "react-native": "0.76.9",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
