expo-av to expo-video

--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -13,8 +13,8 @@
     "@expo/metro-runtime": "~4.0.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.43",
-    "expo-av": "~15.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "~2.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
