--- a/chatbot-rag/frontend/package.json
+++ b/chatbot-rag/frontend/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
+    "@capacitor/ios": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
