--- a/chatbot-rag/frontend/package.json
+++ b/chatbot-rag/frontend/package.json
@@ -12,6 +12,7 @@
     "@capacitor/cli": "^8.0.1",
     "@capacitor/core": "^8.0.1",
     "@capacitor/ios": "^8.0.1",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
