--- a/chatbot-rag/frontend/package.json
+++ b/chatbot-rag/frontend/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
     "vite": "^5.0.0"
   }
 }
