--- a/svelte-teen-zen/package.json
+++ b/svelte-teen-zen/package.json
@@ -11,5 +11,8 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "svelte": "^5.0.0",
     "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^4.0.1"
   }
 }
