--- a/chatbot-rag/frontend/package.json
+++ b/chatbot-rag/frontend/package.json
@@ -1,11 +1,14 @@
 {
   "name": "chatbot-rag-frontend",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@capacitor/android": "^8.0.1",
@@ -22,6 +25,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.23",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
