--- a/chatbot-rag/frontend/.env.android
+++ b/chatbot-rag/frontend/.env.android
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://10.20.50.249:8000
+VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.dev
 VITE_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VITE_CHAT_MODEL=gpt-3.5-turbo
