Updated to ngrok setup

--- a/chatbot-rag/frontend/.env.production
+++ b/chatbot-rag/frontend/.env.production
@@ -1,3 +1,1 @@
-VITE_API_BASE_URL=https://teeth-describing-bailey-consumer.trycloudflare.com                            
-
-#
+VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.de
