Updated to ngrok

--- a/chatbot-rag/frontend/.env.production
+++ b/chatbot-rag/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.de
+VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.dev
