Add google OAuth

--- a/chatbot-rag/frontend/.env.android
+++ b/chatbot-rag/frontend/.env.android
@@ -1,6 +1,6 @@
 VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.dev
 VITE_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VITE_CHAT_MODEL=gpt-3.5-turbo
-
+VITE_GOOGLE_CLIENT_ID=668106230756-6edut56j678vpfvgji8ghv8scbki336k.apps.googleusercontent.com
 #
 
