--- a/chatbot-rag/frontend/.env.production
+++ b/chatbot-rag/frontend/.env.production
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://pardine-inocencia-unjealous.ngrok-free.dev
+VITE_GOOGLE_CLIENT_ID=668106230756-6edut56j678vpfvgji8ghv8scbki336k.apps.googleusercontent.com
