--- a/chatbot-rag/frontend/android/gradle.properties
+++ b/chatbot-rag/frontend/android/gradle.properties
@@ -1,4 +1,13 @@
-# Project-wide Gradle settings.
+```
+
+Look for a line like:
+```
+org.gradle.java.home=C:\Program Files\Android\Android Studio\jbr
+```
+
+**Delete that line** or replace it with:
+```
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home# Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
@@ -21,4 +30,4 @@ org.gradle.jvmargs=-Xmx1536m
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
